--- a/src/styles/Gallery.module.css
+++ b/src/styles/Gallery.module.css
@@ -1,5 +1,7 @@
 .section {
     position: relative;
+    width: 100%;
+    overflow: hidden;
   }
   
   .title {
@@ -13,9 +15,10 @@
     display: flex;
     gap: 24px;
     overflow-x: scroll;
-    width: 100vw;
-    margin-left: calc(-50vw + 50%);
+    width: 100%;
     padding: 24px calc(7.5% + 24px) 24px 0;
+    margin: 0;
+    -webkit-overflow-scrolling: touch;
   }
 
   .track > div:first-child {
